<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_theme">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/let_s_sign_you_in"
                android:textColor="@color/main_font_color"
                android:textSize="40sp"
                android:layout_marginLeft="20dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textColor="@color/main_font_color"
                android:layout_marginTop="10dp"
                android:textSize="32.5sp"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/you_ve_been_missed"
                android:textColor="@color/main_font_color"
                android:layout_marginTop="10dp"
                android:textSize="32.5sp"
                android:layout_marginLeft="20dp"/>


            <EditText
                android:id="@+id/et_username"
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/main_font_color"
                android:backgroundTint="@color/main_font_color"
                android:hint="@string/username"
                android:textColorHint="@color/main_font_color"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColor="@color/white"
                android:textColorHint="@color/main_font_color"
                android:backgroundTint="@color/main_font_color"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:id="@+id/btn_sign_in"
            android:layout_alignParentBottom="true"
            android:background="@drawable/rounded_button"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"/>

    </RelativeLayout>

</FrameLayout>