<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/main_font_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:background="@color/blue_theme">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_tiket"
            android:textSize="50dp"
            android:paddingTop="20dp"
            android:paddingBottom="35dp"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_tanggalstr"
                    android:textSize="30dp"
                    android:textColor="@color/white"
                    android:drawableLeft="@drawable/ic_baseline_calendar_today_24"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_tanggalaja"
                    android:textSize="30dp"
                    android:id="@+id/tv_tanggal_tiket"
                    android:textColor="@color/white"
                    android:paddingBottom="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="80dp"
                android:orientation="vertical">

                <TextView
                    android:drawableLeft="@drawable/ic_baseline_watch_later_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_jamstr"
                    android:textSize="30dp"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_jam"
                    android:textSize="30dp"
                    android:id="@+id/tv_jam_tiket"
                    android:textColor="@color/white"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="213dp"
        android:paddingLeft="30dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_id"
                android:textSize="30dp"
                android:textColor="@color/dark_grey"
                android:drawableLeft="@drawable/ic_baseline_confirmation_number_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_idtiket"
                android:textSize="30dp"
                android:id="@+id/tv_id_tiket"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="25dp"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_nama"
                android:textSize="30dp"
                android:textColor="@color/dark_grey"
                android:drawableLeft="@drawable/ic_baseline_perm_identity_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_namapemesan"
                android:textSize="30dp"
                android:id="@+id/tv_nama_pemesanan"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_asal"
                android:textSize="30dp"
                android:textColor="@color/dark_grey"
                android:drawableLeft="@drawable/ic_baseline_my_location_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_asalkota"
                android:textSize="30dp"
                android:id="@+id/tv_dari_tiket"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_tujuan"
                android:textSize="30dp"
                android:textColor="@color/dark_grey"
                android:drawableLeft="@drawable/ic_location"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_kotatujuan"
                android:textSize="30dp"
                android:id="@+id/tv_ke_tiket"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_seat"
                android:textSize="30dp"
                android:textColor="@color/dark_grey"
                android:drawableLeft="@drawable/ic_baseline_event_seat_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_seatint"
                android:textSize="30dp"
                android:id="@+id/tv_seat"
                android:textColor="@color/black"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>