<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_item"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:weightSum="1">

            <TextView
                android:textAlignment="center"
                android:layout_weight=".45"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham"
                android:textSize="18sp"
                android:text="@string/book_hist_asal"
                android:id="@+id/book_hist_asal"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_weight=".1"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_forward_24"/>
            <TextView
                android:textAlignment="center"
                android:layout_weight=".45"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham"
                android:textSize="18sp"
                android:text="@string/book_hist_tujuan"
                android:id="@+id/book_hist_tujuan"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:fontFamily="@font/gotham"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tanggal_berangkat_hist"
                android:text="@string/_20_december_2021"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginTop="10dp">
            <TextView
                android:fontFamily="@font/gotham"
                android:textSize="15sp"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                android:text="@string/nama_pemesan"
                android:textAlignment="center"/>
            <TextView
                android:fontFamily="@font/gotham"
                android:textSize="15sp"
                android:layout_weight=".5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/nama_pemesan_hist"
                android:layout_marginRight="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginTop="10dp">
            <TextView
                android:fontFamily="@font/gotham"
                android:textSize="15sp"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                android:text="@string/seat_number"
                android:textAlignment="center"/>
            <TextView
                android:fontFamily="@font/gotham"
                android:textSize="15sp"
                android:layout_weight=".5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/seat_num_hist"
                android:layout_marginRight="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:fontFamily="@font/gotham"
                android:textSize="15sp"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                android:text="ID"
                android:textAlignment="center"/>
            <TextView
                android:fontFamily="@font/gotham"
                android:textSize="15sp"
                android:layout_weight=".5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/id_book_hist"
                android:layout_marginRight="10dp"/>
        </LinearLayout>


    </LinearLayout>




</LinearLayout>