<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:strokeColor="@color/blue_theme_secondary"
            app:strokeWidth="2dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tv_profile"
                    android:textColor="@color/blue_theme_secondary"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:id="@+id/keterangan_nama"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_marginLeft="20dp"
                        android:layout_width="0dp"
                        android:layout_weight=".5"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/tv_nama_pengguna"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/tv_nama"
                        android:layout_width="0dp"
                        android:layout_weight=".5"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textColor="@android:color/black"
                        android:textSize="17sp"
                        android:layout_marginRight="20dp"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:id="@+id/keterangan"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_marginLeft="20dp"
                        android:layout_width="0dp"
                        android:layout_weight=".5"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="Point"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/tv_point"
                        android:layout_width="0dp"
                        android:layout_weight=".5"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textColor="@android:color/black"
                        android:textSize="17sp"
                        android:layout_marginRight="20dp"/>

                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/keterangan"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="20sp"
                    android:text="@string/tv_logout"
                    android:id="@+id/btn_logout"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>




        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</FrameLayout>